--- a/p5stuff/package.json
+++ b/p5stuff/package.json
@@ -6,9 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "browser-sync start --server --directory --files * --startPath index.html",
+    "dev": "nodemon server.js --watch server.js --watch *",
     "interact": "browser-sync start --server --directory --files * --startPath interact.html"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0",
+    "osc": "^2.4.5",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
